# docs/v1/swagger.yaml
@@ -4198,6 +4198,35 @@ definitions:
         description: 随机unique id(每次动态生成)
         type: string
     type: object
+  response.MCPServerCustomToolApi:
+    properties:
+      description:
+        description: 方法描述
+        type: string
+      methodName:
+        description: 方法名称
+        type: string
+    type: object
+  response.MCPServerCustomToolSelect:
+    properties:
+      customToolId:
+        description: 自定义工具id
+        type: string
+      description:
+        description: 描述
+        type: string
+      methods:
+        description: 方法
+        items:
+          $ref: '#/definitions/response.MCPServerCustomToolApi'
+        type: array
+      name:
+        description: 名称
+        type: string
+      uniqueId:
+        description: 统一的id
+        type: string
+    type: object
   response.MCPServerDetail:
     properties:
       avatar:
@@ -4951,51 +4980,24 @@ definitions:
     type: object
 info:
   contact: {}
-  description: |-
-    ## HTTP Header
-    | Header        | 说明      |
-    | ------------- | --------- |
-    | Authorization | JWT token |
-    | X-Language    | 语言Code  |
-    | X-Org-Id      | 组织ID    |
-    | X-Client-Id   | 客户端标识|
-
-    ## HTTP Status
-    | HTTP Status             | 说明                   |
-    | ----------------------- | ---------------------- |
-    | 200, StatusOK           | 请求返回成功           |
-    | 400, StatusBadRequest   | 请求返回失败，用于业务 |
-    | 401, StatusUnauthorized | JWT认证失败            |
-    | 403, StatusForbidden    | 没有权限               |
-
-    ## 权限-菜单对应表
-    | 一级权限        | 二级权限  | 三级权限 | 一级菜单 | 二级菜单 | 三级菜单 |
-    |-------------|-------|------|------|------|------|
-    | guest       |       |      | 【访客】 |      |      |
-    | common      |       |      | 【通用】 |      |      |
-    | permission  |       |      | 权限管理 |      |      |
-    | permission  | user  |      | 权限管理 | 用户管理 |      |
-    | permission  | org   |      | 权限管理 | 组织管理 |      |
-    | permission  | role  |      | 权限管理 | 角色管理 |      |
-
-    ## `/v1/user/permission`返回用例
-    ```json
-    {
-      "code": 0,
-      "data": {
-        "orgPermission": {
-          "org": {"id": "test-org-id", "name": "test-org-name"},
-          "permissions": [
-            {"perm": "permission"},
-            {"perm": "permission.user"},
-            {"perm": "permission.org"},
-            {"perm": "permission.role"}
-          ]
-        }
-      },
-      "msg": "操作成功"
-    }
-    ```
+  description: "## HTTP Header\r\n| Header        | 说明      |\r\n| ------------- |
+    --------- |\r\n| Authorization | JWT token |\r\n| X-Language    | 语言Code  |\r\n|
+    X-Org-Id      | 组织ID    |\r\n| X-Client-Id   | 客户端标识|\r\n\r\n## HTTP Status\r\n|
+    HTTP Status             | 说明                   |\r\n| -----------------------
+    | ---------------------- |\r\n| 200, StatusOK           | 请求返回成功           |\r\n|
+    400, StatusBadRequest   | 请求返回失败，用于业务 |\r\n| 401, StatusUnauthorized | JWT认证失败
+    \           |\r\n| 403, StatusForbidden    | 没有权限               |\r\n\r\n## 权限-菜单对应表\r\n|
+    一级权限        | 二级权限  | 三级权限 | 一级菜单 | 二级菜单 | 三级菜单 |\r\n|-------------|-------|------|------|------|------|\r\n|
+    guest       |       |      | 【访客】 |      |      |\r\n| common      |       |      |
+    【通用】 |      |      |\r\n| permission  |       |      | 权限管理 |      |      |\r\n|
+    permission  | user  |      | 权限管理 | 用户管理 |      |\r\n| permission  | org   |      |
+    权限管理 | 组织管理 |      |\r\n| permission  | role  |      | 权限管理 | 角色管理 |      |\r\n\r\n##
+    `/v1/user/permission`返回用例\r\n```json\r\n{\r\n  \"code\": 0,\r\n  \"data\": {\r\n
+    \   \"orgPermission\": {\r\n      \"org\": {\"id\": \"test-org-id\", \"name\":
+    \"test-org-name\"},\r\n      \"permissions\": [\r\n        {\"perm\": \"permission\"},\r\n
+    \       {\"perm\": \"permission.user\"},\r\n        {\"perm\": \"permission.org\"},\r\n
+    \       {\"perm\": \"permission.role\"}\r\n      ]\r\n    }\r\n  },\r\n  \"msg\":
+    \"操作成功\"\r\n}\r\n```"
   title: AI Agent Productivity Platform API
   version: v0.0.1
 paths:
@@ -8462,6 +8464,38 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: 更新MCP Server工具
+      tags:
+      - tool
+  /mcp/server/tool/custom/select:
+    get:
+      consumes:
+      - application/json
+      description: 获取MCP Server自定义工具列表（用于下拉选择）
+      parameters:
+      - description: CustomTool名称
+        in: query
+        name: name
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.ListResult'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/response.MCPServerCustomToolSelect'
+                        type: array
+                    type: object
+              type: object
+      summary: 获取MCP Server自定义工具列表（用于下拉选择）
       tags:
       - tool
   /mcp/server/tool/openapi:
