# internal/bff-service/service/mcp_server.go
@@ -13,6 +13,7 @@ import (
 	mcp_util "github.com/UnicomAI/wanwu/internal/bff-service/pkg/mcp-util"
 	"github.com/UnicomAI/wanwu/pkg/constant"
 	grpc_util "github.com/UnicomAI/wanwu/pkg/grpc-util"
+	openapi3_util "github.com/UnicomAI/wanwu/pkg/openapi3-util"
 	"github.com/gin-gonic/gin"
 )
 
@@ -230,6 +231,39 @@ func CreateMCPServerOpenAPITool(ctx *gin.Context, userID, orgID string, req requ
 	}, req.MethodNames)
 }
 
+func GetMCPServerCustomToolSelect(ctx *gin.Context, userID, orgID, name string) (*response.ListResult, error) {
+	resp, err := mcp.GetCustomToolList(ctx.Request.Context(), &mcp_service.GetCustomToolListReq{
+		Identity: &mcp_service.Identity{
+			UserId: userID,
+			OrgId:  orgID,
+		},
+		Name: name,
+	})
+	if err != nil {
+		return nil, err
+	}
+	var list []response.MCPServerCustomToolSelect
+	for _, item := range resp.List {
+		info, err := mcp.GetCustomToolInfo(ctx.Request.Context(), &mcp_service.GetCustomToolInfoReq{
+			CustomToolId: item.CustomToolId,
+		})
+		if err != nil {
+			return nil, err
+		}
+		doc, err := openapi3_util.LoadFromData(ctx.Request.Context(), []byte(info.Schema))
+		if err != nil {
+			return nil, grpc_util.ErrorStatus(err_code.Code_BFFInvalidArg, err.Error())
+		}
+		apis := openapiSchema2ToolList(doc)
+		toolList := toMCPServerCustomToolSelect(item, apis)
+		list = append(list, toolList...)
+	}
+	return &response.ListResult{
+		List:  list,
+		Total: int64(len(list)),
+	}, nil
+}
+
 func GetMCPServerSSE(ctx *gin.Context, mcpServerId string, key string) error {
 	queryParams := ctx.Request.URL.Query()
 	queryParams.Set("key", key)
@@ -382,4 +416,23 @@ func convertToolApiAuth(auth *mcp_service.ApiAuthWebRequest) *mcp_util.APIAuth {
 		}
 	}
 	return ret
+}
+
+func toMCPServerCustomToolSelect(item *mcp_service.GetCustomToolItem, apis []response.CustomToolActionInfo) []response.MCPServerCustomToolSelect {
+	var list []response.MCPServerCustomToolSelect
+	var methods []response.MCPServerCustomToolApi
+	for _, api := range apis {
+		methods = append(methods, response.MCPServerCustomToolApi{
+			MethodName:  api.Name,
+			Description: api.Desc,
+		})
+	}
+	list = append(list, response.MCPServerCustomToolSelect{
+		UniqueId:     constant.MCPServerToolTypeCustomTool + "-" + item.CustomToolId,
+		CustomToolId: item.CustomToolId,
+		Name:         item.Name,
+		Description:  item.Description,
+		Methods:      methods,
+	})
+	return list
 }
